fixed vertical alignment issues

--- a/imports/ui/style/scss/lessons/lessons.scss
+++ b/imports/ui/style/scss/lessons/lessons.scss
@@ -277,6 +277,10 @@
 
 -------------------------------- */
 
+.swiper-wrapper {
+  align-items: center
+}
+
 .swiper-button-next {
   width: auto !important;
   margin-top: 0;
